--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center">
+      <h1 class="title">LOGIN APP</h1>
+    </div>
+    <div class="col-lg-12 form-group">
+      <label for="">Welcome</label>
+   
+    </div>
+    <div class="col-lg-12 form-group">
+      <label for="">List Users</label>
+      <table class="table">
+        <thead>
+          <th>ID</th>
+          <th>User Name</th>
+        </thead>
+        <tbody>
+        <% @user.each do |x| %>
+            <h1> <%= x.name %> </h1>
+            
+        <% end %> 
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
