--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,5 @@
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12 text-center">
-      <h1 class="title">LOGIN APP</h1>
-    </div>
-    <div class="col-lg-12 form-group">
-      <label for="">Welcome</label>
-   
-    </div>
-    <div class="col-lg-12 form-group">
-      <label for="">List Users</label>
-      <table class="table">
-        <thead>
-          <th>ID</th>
-          <th>User Name</th>
-        </thead>
-        <tbody>
-        <% @user.each do |x| %>
-            <h1> <%= x.name %> </h1>
-            
-        <% end %> 
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+<% @user.each do |x| %>
+  <h1> <%= x.name %>, <%= x.email %> </h1>
+  
+<% end %> 
