Chuong 10 - Finish user edit, update, index and destroy actions

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 
-<% @user.each do |x| %>
-  <h1> <%= x.name %>, <%= x.email %> </h1>
-  
-<% end %> 
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
+<%= will_paginate %>
+<ul class="users">
+ <%= render @users %>
+</ul>
+<%= will_paginate %>
